--- a/dist.ini
+++ b/dist.ini
@@ -9,13 +9,13 @@ copyright_holder=Steven Haryanto
 :version=0.25
 
 [Prereqs / TestRequires]
-File::Slurp=0
-Test::More=0.98
+;Test::More=0.98
 
 [Prereqs]
 perl=5.010001
 experimental=0
 
+;!lint-prereqs assume-used # undetected, via DBI
 DBD::CSV=0
 DBI=0
 JSON=0
