Comment out 'use experimental'

--- a/dist.ini
+++ b/dist.ini
@@ -13,7 +13,7 @@ copyright_holder=Steven Haryanto
 
 [Prereqs]
 perl=5.010001
-experimental=0
+;experimental=0
 
 ;!lint-prereqs assume-used # undetected, via DBI
 DBD::CSV=0
