Add input/output format 'perl'

--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,7 @@ copyright_holder=Steven Haryanto
 perl=5.010001
 ;experimental=0
 
+Data::Format::Pretty::Perl=0
 ;!lint-prereqs assume-used # undetected, via DBI
 DBD::CSV=0
 DBI=0
