--- a/dist.ini
+++ b/dist.ini
@@ -9,7 +9,10 @@ copyright_holder=Steven Haryanto
 :version=0.25
 
 [Prereqs / TestRequires]
-;Test::More=0.98
+File::chdir=0
+File::Slurp=0
+String::ShellQuote=0
+Test::More=0.98
 
 [Prereqs]
 perl=5.010001
