--- a/t/data/1.yaml
+++ b/t/data/1.yaml
@@ -1,2 +1,2 @@
 # enveloped with table information
-[200, "OK", [[a, 1, 0.1], [b, 2, 0.2], [c, 3, 0.3]], {table_fields: [col1, col 2, Col3]}]
+[200, "OK", [[a, 1, 0.1], [b, 2, 0.2], [c, 3, 0.3]], {"table.fields": [col1, "col  2", Col3]}]
