--- a/dist.ini
+++ b/dist.ini
@@ -18,12 +18,14 @@ Test::More=0.98
 perl=5.010001
 ;experimental=0
 
+Data::Format::Pretty::Console=0
+Data::Format::Pretty::JSON=0
 Data::Format::Pretty::Perl=0
+Data::Format::Pretty::YAML=0
 ;!lint-prereqs assume-used # undetected, via DBI
 DBD::CSV=0
 DBI=0
 JSON=0
-Perinci::Result::Format=0
 Perinci::Result::Util=0
 Text::CSV_XS=0
 Text::LTSV=0
