dist: Force version of IPC::Cmd (which has run_forked())

--- a/dist.ini
+++ b/dist.ini
@@ -25,6 +25,7 @@ Data::Format::Pretty::YAML=0
 ;!lint-prereqs assume-used # undetected, via DBI
 DBD::CSV=0
 DBI=0
+IPC::Cmd=0.52
 JSON=0
 Perinci::Result::Util=0
 Text::CSV_XS=0
