--- a/dist.ini
+++ b/dist.ini
@@ -10,7 +10,7 @@ copyright_holder=Steven Haryanto
 
 [Prereqs / TestRequires]
 File::chdir=0
-File::Slurp=0
+File::Slurp::Tiny=0
 String::ShellQuote=0
 Test::More=0.98
 
