--- a/dist.ini
+++ b/dist.ini
@@ -1,11 +1,8 @@
 version=0.11
 
 name=App-fsql
-author=Steven Haryanto <stevenharyanto@gmail.com>
-license=Perl_5
-copyright_holder=Steven Haryanto
 
-[@Author::SHARYANTO]
+[@Author::PERLANCAR]
 :version=0.25
 
 [Prereqs / TestRequires]
