[dzil] Update syntax of lint-prereqs directive (-> lint_prereqs) to be more IOD-compliant

--- a/dist.ini
+++ b/dist.ini
@@ -19,7 +19,7 @@ Data::Format::Pretty::Console=0
 Data::Format::Pretty::JSON=0
 Data::Format::Pretty::Perl=0
 Data::Format::Pretty::YAML=0
-;!lint-prereqs assume-used # undetected, via DBI
+;!lint_prereqs assume-used # undetected, via DBI
 DBD::CSV=0
 DBI=0
 IPC::Cmd=0.52
