[dist] Re-pass lint-prereqs (core modules must now be listed)

--- a/dist.ini
+++ b/dist.ini
@@ -8,12 +8,16 @@ name=App-fsql
 [Prereqs / TestRequires]
 File::chdir=0
 File::Slurp::Tiny=0
+FindBin=0
 String::ShellQuote=0
 Test::More=0.98
 
 [Prereqs]
 perl=5.010001
+
 ;experimental=0
+strict=0
+warnings=0
 
 Data::Format::Pretty::Console=0
 Data::Format::Pretty::JSON=0
@@ -22,6 +26,8 @@ Data::Format::Pretty::YAML=0
 ;!lint_prereqs assume-used # undetected, via DBI
 DBD::CSV=0
 DBI=0
+File::Temp=0
+Getopt::Long=0
 IPC::Cmd=0.52
 JSON=0
 Perinci::Result::Util=0
