Replace JSON with JSON::MaybeXS

--- a/dist.ini
+++ b/dist.ini
@@ -9,16 +9,15 @@ name=App-fsql
 File::chdir=0
 File::Slurp::Tiny=0
 FindBin=0
+IPC::Cmd=0.52
 String::ShellQuote=0
 Test::More=0.98
 
 [Prereqs]
 perl=5.010001
-
 ;experimental=0
 strict=0
 warnings=0
-
 Data::Format::Pretty::Console=0
 Data::Format::Pretty::JSON=0
 Data::Format::Pretty::Perl=0
@@ -28,9 +27,9 @@ DBD::CSV=0
 DBI=0
 File::Temp=0
 Getopt::Long=0
-IPC::Cmd=0.52
-JSON=0
+JSON::MaybeXS=0
 Perinci::Result::Util=0
 Text::CSV_XS=0
 Text::LTSV=0
 YAML::XS=0
+
