--- a/dist.ini
+++ b/dist.ini
@@ -7,7 +7,7 @@ name=App-fsql
 
 [Prereqs / TestRequires]
 File::chdir=0
-File::Slurp::Tiny=0
+File::Slurper=0
 FindBin=0
 IPC::Cmd=0.52
 String::ShellQuote=0
@@ -32,4 +32,3 @@ Perinci::Result::Util=0
 Text::CSV_XS=0
 Text::LTSV=0
 YAML::XS=0
-
