--- a/dist.ini
+++ b/dist.ini
@@ -1,10 +1,10 @@
-version=0.22
+version=0.230
 
 name=App-fsql
 
 [@Author::PERLANCAR]
+:version=0.594
 
-:version=0.58
 [Prereqs / TestRequires]
 File::chdir=0
 File::Slurper=0
@@ -22,7 +22,7 @@ Data::Format::Pretty::Console=0
 Data::Format::Pretty::JSON=0
 Data::Format::Pretty::Perl=0
 Data::Format::Pretty::YAML=0
-;!lint_prereqs assume-used # undetected, via DBI
+;!lint_prereqs assume-used "undetected, via DBI"
 DBD::CSV=0
 DBI=0
 File::Temp=0
