[dist] (Re-)add copyright & license information to dist.ini to make dist more easily buildable by others

--- a/dist.ini
+++ b/dist.ini
@@ -1,9 +1,15 @@
-version=0.230
+;---------------------------------
+author  = perlancar <perlancar@cpan.org>
+copyright_holder = perlancar <perlancar@cpan.org>
+license = Perl_5
+;---------------------------------
+
+version=0.231
 
 name=App-fsql
 
 [@Author::PERLANCAR]
-:version=0.594
+:version=0.605
 
 [Prereqs / TestRequires]
 File::chdir=0
@@ -25,8 +31,8 @@ Data::Format::Pretty::YAML=0
 ;!lint_prereqs assume-used "undetected, via DBI"
 DBD::CSV=0
 DBI=0
-File::Temp=0
-Getopt::Long=0
+File::Temp=0.2307
+Getopt::Long=2.50
 JSON::MaybeXS=0
 Perinci::Result::Util=0
 Text::CSV_XS=0
