Add logging, add support for TableData module

--- a/dist.ini
+++ b/dist.ini
@@ -34,7 +34,13 @@ DBI=0
 File::Temp=0.2307
 Getopt::Long=2.50
 JSON::MaybeXS=0
+Log::ger::Screen=0
+Log::ger::Util=0.037
+Module::Load::Util=0.009
 Perinci::Result::Util=0
+Role::Tiny=0
+TableDataRole::Util::CSV=0
 Text::CSV_XS=0
 Text::LTSV=0
 YAML::XS=0
+
